--- a/JavaAPI/pom.xml
+++ b/JavaAPI/pom.xml
@@ -140,6 +140,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                        <outputDirectory>/home/ec2/</outputDirectory>
                     <source>11</source>
                     <target>11</target>
                 </configuration>
